[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.22.0", features = ["full"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.64"
utoipa = { features = ["axum_extras"], version = "4.1.0" }
utoipa-swagger-ui = { features = ["axum"], version = "4.0.0" }
uuid = { features = [
                    "v4",                # Lets you generate random UUIDs
                    "fast-rng",          # Use a faster (but still sufficiently random) RNG
                    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
                    "serde",
                ],version = "1.6.1"}